--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -2,7 +2,6 @@
 
 .bounds {
     background-color:#ddd;
-    height :800px;
   }
   
   .sec1 {
@@ -24,11 +23,9 @@
   }
   
   .sec1, .sec2, .sec3 {
-    padding-top:20px;
     text-align:center
   }
-  
-  .content {
-    min-width: 300px;
-    /*height: 400px;*/
+
+  .example-form-field {
+    width: 200px;
   }
