--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -3,18 +3,41 @@
 <head>
 </head>
 <body>
-    <div class="bounds">
-        <div class="content" fxLayout="row" fxLayout.xs="column" fxFlexFill>
-            <div fxFlex="15" class="sec1" fxFlex.xs="55">
-                first-section
-            </div>
-            <div fxFlex="30" class="sec2">
-                second-section
-            </div>
-            <div fxFlex="55" class="sec3" fxFlex.xs="15">
-                third-section
-            </div>
+  <div class="bounds">
+    <div fxLayout="column" fxLayoutAlign="space-evenly stretch">
+      <div fxFlex="80" class="sec1">
+        <div fxLayout="row" fxLayoutAlign="space-evenly stretch">
+          <div fxFlex="50" class="sec1">
+
+
+            <mat-card class="example-card">
+                <mat-card-header></mat-card-header>
+                <mat-card-content>
+
+                    <mat-form-field class="example-form-field">
+                        <mat-label>Clearable input</mat-label>
+                        <input matInput type="text" [(ngModel)]="value">
+                        <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+                          <mat-icon>close</mat-icon>
+                        </button>
+                      </mat-form-field>
+
+                </mat-card-content>
+              </mat-card>
+          
+        
+              
         </div>
+          <div fxFlex="50" class="sec3">
+            third-section
+          </div>
+        </div>
+      </div>
+      <div fxFlex="20" class="sec2" >
+        <button mat-raised-button>Clear</button>  
+        <button mat-raised-button>Limmersify text!</button>  
+      </div>
     </div>
+  </div>
 </body>
 </html>
