--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -1,28 +1,17 @@
 /* Add application styles & imports to this file! */
 
-.bounds {
-    background-color:#ddd;
+
+  
+  .input-text{
+    width: 100%;
+    height: 100%;
   }
   
-  .sec1 {
-    background: red;
-    color:white;
-    text-transform: uppercase
-  }
+  .mat-card-header {
+    justify-content: center;
+}
   
-  .sec2 {
-    background: yellow;
-    color:blue;
-    
-  }
-  
-  .sec3 {
-    background: blue;
-    color:white;
-    text-transform: uppercase
-  }
-  
-  .sec1, .sec2, .sec3 {
+.button-area {
     text-align:center
   }
 
