--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -24,6 +24,7 @@
     left:       0; 
     position:   fixed;
   }
+
 .centerSpinner {
     position: absolute;
     top: 50%;
@@ -31,4 +32,12 @@
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
+}
+
+.example-margin {
+  margin: 8px;
+}
+
+.text-area{
+  height:200px;
 }
