Bug fixing and improving FE-BE communication

--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -41,3 +41,8 @@
 .text-area{
   height:200px;
 }
+
+:host ::ng-deep .translated-word{
+  color: red !important;;
+  font-weight: bold !important;
+}
