Fixed some linting issues

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -18,7 +18,7 @@
                   </mat-form-field>
                   <mat-label>Select the target language:   </mat-label>
                   <mat-select [(ngModel)]="selectedTargetLanguage">
-                      <mat-option *ngFor="let target_language_type of target_language_types" [value]="target_language_type.item">
+                      <mat-option *ngFor="let TargetLanguageType of targetLanguageTypes" [value]="target_language_type.item">
                           {{ target_language_type.viewValue }}
                       </mat-option>
                   </mat-select>
